[package]
name = "redis2ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["cargo"] }
futures-util = "0.3.28"
redis = { version = "0.23.0", features = ["tokio-comp"] }
tokio = { version = "1.27.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
tungstenite = "0.18.0"
